<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:hint="@string/IP_address"
        android:id="@+id/IP_address" />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/eg_IP_address"
        android:id="@+id/eg_IP_address" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/port_number"
        android:id="@+id/port_number" />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/eg_port_number"
        android:id="@+id/eg_port_number" />

        <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/button_ON"
        android:id="@+id/button_ON" />

        <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/button_OFF"
        android:id="@+id/button_OFF" />
    </LinearLayout>


</ScrollView>

