<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/Tela_Inicial"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/IP_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:hint="@string/help"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14dp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listWeb"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:divider="@null"

            android:dividerHeight="0dp"
            android:longClickable="false"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/disp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="12dp"
                android:hint="@string/disp"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/disp_escolhido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="12dp"
                android:hint="@string/disp_escolhido"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/button_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_find" />

        <Button
            android:id="@+id/button_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_connect" />

        <Button
            android:id="@+id/button_access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_access" />

        <Button
            android:id="@+id/button_teste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Teste" />

    </LinearLayout>

